syntax ="proto3";
package pb_user;
option go_package = "github.com/marsxingzhi/goim/pkg/proto/pb_user";  



message UserInfo {
    int64 uid = 1; // uid
    int32 status = 3; // 用户状态
    string nickname = 4; // 昵称
    string firstname = 5; // firstname
    string lastname = 6; // lastname
    int32 gender = 7; // 性别
    int64 birth_ts = 8; // 生日
    string mobile = 9; // 手机号
  }